--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
         "@types/react": "^16.9.53",
         "@types/react-dom": "^16.9.8",
         "@types/react-router-dom": "^5.1.6",
+        "@types/styled-components": "^5.1.4",
         "husky": "^4.3.0",
         "prettier": "^2.1.2",
         "pretty-quick": "^3.1.0"
