--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "classnames": "^2.2.6",
         "quarks-ui": "^0.0.31",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.0",
+        "styled-components": "^5.2.1",
+        "styled-system": "^5.1.5",
         "typescript": "^4.0.3",
         "web-vitals": "^0.2.4"
     },
@@ -55,12 +58,14 @@
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
         "@testing-library/user-event": "^12.1.10",
+        "@types/classnames": "^2.2.11",
         "@types/jest": "^26.0.15",
         "@types/node": "^12.0.0",
         "@types/react": "^16.9.53",
         "@types/react-dom": "^16.9.8",
         "@types/react-router-dom": "^5.1.6",
         "@types/styled-components": "^5.1.4",
+        "@types/styled-system": "^5.1.10",
         "husky": "^4.3.0",
         "prettier": "^2.1.2",
         "pretty-quick": "^3.1.0"
