--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "react-dom": "^17.0.1",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.0",
+        "react-select": "^3.1.0",
         "styled-components": "^5.2.1",
         "styled-system": "^5.1.5",
         "typescript": "^4.0.3",
@@ -66,6 +67,7 @@
         "@types/react": "^16.9.53",
         "@types/react-dom": "^16.9.8",
         "@types/react-router-dom": "^5.1.6",
+        "@types/react-select": "^3.0.23",
         "@types/styled-components": "^5.1.4",
         "@types/styled-system": "^5.1.10",
         "@types/yup": "^0.29.9",
