--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "quarks-ui": "^0.0.31",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
+        "react-dropzone": "^11.2.3",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.0",
         "react-select": "^3.1.0",
