--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "classnames": "^2.2.6",
         "formik": "^2.2.1",
+        "moment": "^2.29.1",
         "quarks-ui": "^0.0.31",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
