--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "moment": "^2.29.1",
         "quarks-ui": "^0.0.31",
         "react": "^17.0.1",
+        "react-datepicker": "^3.3.0",
         "react-dom": "^17.0.1",
         "react-dropzone": "^11.2.3",
         "react-router-dom": "^5.2.0",
@@ -67,6 +68,7 @@
         "@types/jest": "^26.0.15",
         "@types/node": "^12.0.0",
         "@types/react": "^16.9.53",
+        "@types/react-datepicker": "^3.1.1",
         "@types/react-dom": "^16.9.8",
         "@types/react-router-dom": "^5.1.6",
         "@types/react-select": "^3.0.23",
