--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
+        "test:coverage": "yarn test --coverage --watchAll=false",
         "format": "prettier --write \"src/**/*.{json,md,ts,tsx}\" ",
         "eject": "react-scripts eject"
     },
@@ -62,9 +63,10 @@
     },
     "devDependencies": {
         "@testing-library/jest-dom": "^5.11.4",
-        "@testing-library/react": "^11.1.0",
+        "@testing-library/react": "^11.1.1",
         "@testing-library/user-event": "^12.1.10",
         "@types/classnames": "^2.2.11",
+        "@types/faker": "^5.1.4",
         "@types/jest": "^26.0.15",
         "@types/node": "^12.0.0",
         "@types/react": "^16.9.53",
@@ -72,11 +74,24 @@
         "@types/react-dom": "^16.9.8",
         "@types/react-router-dom": "^5.1.6",
         "@types/react-select": "^3.0.23",
+        "@types/react-test-renderer": "^16.9.3",
         "@types/styled-components": "^5.1.4",
         "@types/styled-system": "^5.1.10",
         "@types/yup": "^0.29.9",
+        "faker": "^5.1.0",
         "husky": "^4.3.0",
+        "jest-styled-components": "^7.0.3",
         "prettier": "^2.1.2",
-        "pretty-quick": "^3.1.0"
+        "pretty-quick": "^3.1.0",
+        "react-test-renderer": "^17.0.1"
+    },
+    "jest": {
+        "coveragePathIgnorePatterns": [
+            "<rootDir>/src/setupTests.ts",
+            "<rootDir>/src/reportWebVitals.ts",
+            "<rootDir>/src/index.tsx",
+            "<rootDir>/src/routes.tsx",
+            "<rootDir>/src/App.tsx"
+        ]
     }
 }
