--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
+        "coverage-badge": "make-coverage-badge --output-path ./badge.svg",
         "test:coverage": "yarn test --coverage --watchAll=false",
         "format": "prettier --write \"src/**/*.{json,md,ts,tsx}\" ",
         "eject": "react-scripts eject"
@@ -81,11 +82,15 @@
         "faker": "^5.1.0",
         "husky": "^4.3.0",
         "jest-styled-components": "^7.0.3",
+        "make-coverage-badge": "^1.2.0",
         "prettier": "^2.1.2",
         "pretty-quick": "^3.1.0",
         "react-test-renderer": "^17.0.1"
     },
     "jest": {
+        "coverageReporters": [
+            "json-summary"
+        ],
         "coveragePathIgnorePatterns": [
             "<rootDir>/src/setupTests.ts",
             "<rootDir>/src/reportWebVitals.ts",
