--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
         "coverage-badge": "make-coverage-badge --output-path ./badge.svg",
         "test:coverage": "yarn test --coverage --watchAll=false",
         "format": "prettier --write \"src/**/*.{json,md,ts,tsx}\" ",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
     },
     "repository": {
         "type": "git",
@@ -80,6 +82,7 @@
         "@types/styled-system": "^5.1.10",
         "@types/yup": "^0.29.9",
         "faker": "^5.1.0",
+        "gh-pages": "^3.1.0",
         "husky": "^4.3.0",
         "jest-styled-components": "^7.0.3",
         "make-coverage-badge": "^1.2.0",
